<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="230dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rl_weather_daily_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_setting_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tv_setting_title"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_setting_ten"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_weather_main"
        android:text="@string/btn_setting_ten"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn_setting_sixty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_weather_main"
        android:text="@string/btn_setting_sixty"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn_setting_twelve"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_weather_main"
        android:text="@string/btn_setting_twelve"
        android:textColor="@color/white"
        android:textSize="19sp" />


</LinearLayout>