<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="230dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rl_weather_daily_bg"
    android:orientation="vertical">


    <SeekBar
        android:id="@+id/sb_share_day"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:max="4"
        android:progress="0" />

    <TextView
        android:id="@+id/tv_share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="29dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_share_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_share_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_share_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/tv_share_day"
        android:layout_toEndOf="@+id/tv_share_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bg_weather_main"
        android:textSize="33sp" />

    <TextView
        android:id="@+id/tv_share_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="29dp"
        android:layout_toRightOf="@+id/tv_share_day"
        android:text="@string/tv_share_days"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_share_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@drawable/bg_weather_main"
        android:text="@string/btn_share_share"
        android:textColor="@color/white" />

</RelativeLayout>