<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_city_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <LinearLayout
            android:id="@+id/ly_citysearch_singlemode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="12">

            <EditText
                android:id="@+id/et_citysearch_edit"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:layout_weight="10"
                android:background="@drawable/bg_city_search"
                android:maxLength="50"
                android:hint="@string/et_citysearch"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textColorHint="@color/hint_gray" />

            <TextView
                android:id="@+id/tv_citysearch_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/tv_citysearch"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_citysearch_multimode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="12">

            <TextView
                android:id="@+id/tv_citysearch_mutimode_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tv_citysearch_mutimode_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/tv_citysearch_multimode_all"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <ImageButton
                android:id="@+id/btn_citysearch_multimode_del"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.7"
                android:background="@drawable/button_delete" />


        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ly_citysearch_gps"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_city_search_gps">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/iv_city_search_gps"/>

        <TextView
            android:id="@+id/tv_citysearch_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_citysearch_gps"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/gray"
            />

    </LinearLayout>



    <ListView
        android:id="@+id/lv_city_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null">

    </ListView>


</LinearLayout>